force-app/main/default/objects/TLB_Approval_Matrix__c/TLB_Approval_Matrix__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>TLB Approval Matrix</label>
</CustomObject>