force-app/main/default/objects/TLB_Approval_Matrix__c/fields/ApprovalLimit_PerOrder__c.field-meta.xml
<CustomField>
    <fullName>ApprovalLimit_PerOrder__c</fullName>
    <label>ApprovalLimit PerOrder</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>