force-app/main/default/objects/TLB_Approval_Matrix__c/fields/ApprovalLimitForHOS__c.field-meta.xml
<CustomField>
    <fullName>ApprovalLimitForHOS__c</fullName>
    <label>ApprovalLimitForHOS</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>