force-app/main/default/objects/TLB_Approval_Matrix__c/fields/CountryName__c.field-meta.xml
<CustomField>
    <fullName>CountryName__c</fullName>
    <label>CountryName</label>
    <length>42</length>
    <type>Text</type>
</CustomField>