force-app/main/default/objects/TLB_Approval_Matrix__c/fields/Notification__c.field-meta.xml
<CustomField>
    <fullName>Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>set to true if approver wants to receive approval emails</description>
    <label>Notification</label>
    <type>Checkbox</type>
</CustomField>