force-app/main/default/objects/TLB_Approval_Matrix__c/listViews/Talabat_All.listView-meta.xml
<ListView>
    <fullName>Talabat_All</fullName>
    <columns>NAME</columns>
    <columns>CountryName__c</columns>
    <columns>Notification__c</columns>
    <columns>Role__c</columns>
    <columns>ApprovalLimitForHOS__c</columns>
    <columns>ApprovalLimit_PerOrder__c</columns>
    <columns>SETUP_TYPE</columns>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Talabat - All</label>
    <language>en_US</language>
</ListView>